--- a/linux-cachy-nspa/PKGBUILD
+++ b/linux-cachy-nspa/PKGBUILD
@@ -1,23 +1,26 @@
-# Contributor: Peter Jung ptr1337 <admin@ptr1337.dev>
-# Contributor: Piotr Gorski <lucjan.lucjanov@gmail.com>
+# Maintainer: Jordan Johnston <johnstonljordan@gmail.com>
+# Maintainer: Peter Jung ptr1337 <admin@ptr1337.dev>
+# Maintainer: Piotr Gorski <lucjan.lucjanov@gmail.com>
 # Contributor: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 # Contributor: Tobias Powalowski <tpowa@archlinux.org>
 # Contributor: Thomas Baechler <thomas@archlinux.org>
+
+### Selecting the CPU scheduler
+# ATTENTION - one of seven predefined values should be selected!
+# 'bmq' - select 'BitMap Queue CPU scheduler'
+# 'pds' - select 'Priority and Deadline based Skip list multiple queue CPU scheduler'
+# 'cacule' - select 'CacULE scheduler'
+# 'cacule-rdb' - select 'CacULE-RDB scheduler'
+# 'bore' - select 'Burst-Oriented Response Enhancer'
+# 'tt' - select 'Task Type Scheduler by Hamad Marri'
+# 'cfs' - select 'Completely Fair Scheduler'
+_cpusched='cfs'
 
 ### BUILD OPTIONS
 # Set these variables to ANYTHING that is not null to enable them
 
 ### Tweak kernel options prior to a build via nconfig
 _makenconfig=y
-
-### Tweak kernel options prior to a build via menuconfig
-_makemenuconfig=
-
-### Tweak kernel options prior to a build via xconfig
-_makexconfig=
-
-### Tweak kernel options prior to a build via gconfig
-_makegconfig=
 
 # NUMA is optimized for multi-socket motherboards.
 # A single multi-core CPU actually runs slower with NUMA enabled.
@@ -41,15 +44,10 @@ _localmodcfg=y
 # a new kernel is released, but again, convenient for package bumps.
 _use_current=
 
-
-# Enable fsync
-_fsync=y
-
 #enable winesync
 _winesync=y
 
-### Running with a 2000 HZ, 1000HZ, 750Hz or  500HZ tick rate
-_2k_HZ_ticks=
+### Running with a 1000HZ, 750Hz or  500HZ tick rate
 _1k_HZ_ticks=y
 _750_HZ_ticks=
 _600_HZ_ticks=
@@ -67,15 +65,12 @@ _mm_protect=y
 ### Enable multigenerational LRU
 _lru_enable=y
 
+## Enable Page-Table-Check
+_page_table_check=y
+
 ### Enable DAMON
 _damon=
 
-# experimental;
-# User Managed Concurrency Groups is an M:N threading toolkit that allows
-# constructing user space schedulers designed to efficiently manage
-# heterogeneous in-process workloads while maintaining high CPU
-# utilization (95%+).
-#_enable_umcg=
 ### Enable Linux Random Number Generator
 _lrng_enable=y
 
@@ -123,12 +118,12 @@ _use_cfi=
 
 
 if [ -n "$_use_llvm_lto" ]; then
-  pkgbase=linux-cachyos-nspa-lto
+  pkgbase=ltlinux-cachy-nspa
 else
-  pkgbase=linux-cachyos-nspa
+  pkgbase=linux-cachy-nspa
 fi
 _major=5.15
-_minor=11
+_minor=13
 pkgver=${_major}.${_minor}
 _srcname=linux-${pkgver}
 arch=(x86_64 x86_64_v3)
@@ -142,12 +137,17 @@ options=('!strip')
 makedepends=('kmod' 'bc' 'libelf' 'python-sphinx' 'python-sphinx_rtd_theme'
 'graphviz' 'imagemagick' 'pahole' 'cpio' 'perl' 'tar' 'xz')
 if [ -n "$_use_llvm_lto" ]; then
+  depends=(clang llvm lld python)
+fi
+if [ -n "$_use_llvm_lto" ]; then
   makedepends+=(clang llvm lld python)
 fi
+_caculepatches="https://raw.githubusercontent.com/ptr1337/kernel-patches/master/CacULE"
 _patchsource="https://raw.githubusercontent.com/ptr1337/kernel-patches/master/5.15"
-source=(#"https://www.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.xz"
+source=(
   "https://cdn.kernel.org/pub/linux/kernel/v${pkgver%%.*}.x/${_srcname}.tar.xz"
   "config"
+  "config_stock"
   "0001-arch-patches.patch"
   "0001-cfi.patch"
   "0001-lru-patches.patch"
@@ -162,7 +162,6 @@ source=(#"https://www.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.xz"
   "0001-clearlinux-patches.patch"
   "0001-intel-patches.patch"
   "0001-ntfs3.patch"
-  "0001-ck-hrtimer.patch"
   "0001-fixes-miscellaneous.patch"
   "0001-futex-wait.v-fsync-winesync.patch"
   "0001-hwmon-patches.patch"
@@ -174,22 +173,22 @@ source=(#"https://www.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.xz"
   "0001-v4l2loopback.patch"
   "0001-security-patches.patch"
   "0001-spectre-patches.patch"
-  "0001-sbitmap-patches.patch"
   "0001-xanmod-patches.patch"
   "0001-net-patches.patch"
+  "0001-sbitmap-patches.patch"
   "0001-zstd.patch"
   "auto-cpu-optimization.sh"
-  "0060-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"
-  "0020-mm-Lower-the-non-hugetlbpage-pageblock-size-to-reduc.patch"
-  "0021-mm-Don-t-hog-the-CPU-and-zone-lock-in-rmqueue_bulk.patch"
-  "0030-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"
-  "0001-mm-Support-soft-dirty-flag-reset-for-VA-range.patch"
-  "0002-mm-Support-soft-dirty-flag-read-with-reset.patch"
+  "10060-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"
+  "10020-mm-Lower-the-non-hugetlbpage-pageblock-size-to-reduc.patch"
+  "10021-mm-Don-t-hog-the-CPU-and-zone-lock-in-rmqueue_bulk.patch"
+  "10030-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"
+  "10001-mm-Support-soft-dirty-flag-reset-for-VA-range.patch"
+  "10002-mm-Support-soft-dirty-flag-read-with-reset.patch"
 )
 
-if [ -n "$_use_pgo" ]; then
-  source+=("0001-PGO.patch")
-fi
+#if [ -n "$_use_pgo" ]; then
+#  source+=("0001-PGO.patch")
+#fi
 
 if [ -n "$_use_llvm_lto" ]; then
   LLVMOPTS="LLVM=1 LLVM_IAS=1"
@@ -243,17 +242,6 @@ prepare() {
     fi
   fi
 
-  if [ -n "$_use_cfi" ] && [ -n "$_use_llvm_lto" ]; then
-    scripts/config --enable CONFIG_ARCH_SUPPORTS_CFI_CLANG
-    scripts/config --enable CONFIG_CFI_CLANG
-  fi
-
-  if [ -n "$_use_pgo" ]; then
-    scripts/config --enable CONFIG_ARCH_SUPPORTS_PGO_CLANG
-    scripts/config --enable DEBUG_FS
-    scripts/config --enable CONFIG_PGO_CLANG
-  fi
-
   ### Microarchitecture Optimization (GCC/CLANG)
   if [ -n "$_use_auto_optimization" ]; then
     "${srcdir}"/auto-cpu-optimization.sh
@@ -264,6 +252,64 @@ prepare() {
     source "${startdir}"/configure
     cpu_arch
   fi
+
+
+  ### Selecting the CPU scheduler
+  if [ "$_cpusched" = "bmq" ]; then
+    echo "Selecting BMQ CPU scheduler..."
+    scripts/config --enable CONFIG_SCHED_BMQ
+    scripts/config --disable CONFIG_SCHED_PDS
+  elif [ "$_cpusched" = "pds" ]; then
+    echo "Selecting PDS CPU scheduler..."
+    scripts/config --disable CONFIG_SCHED_BMQ
+    scripts/config --enable CONFIG_SCHED_PDS
+  elif [ "$_cpusched" = "cacule" ]; then
+    echo "Selecting CacULE scheduler..."
+    scripts/config --disable CONFIG_SCHED_ALT
+    scripts/config --enable CONFIG_CACULE_SCHED
+  elif [ "$_cpusched" = "cacule-rdb" ]; then
+    echo "Selecting CacULE-RDB scheduler..."
+    scripts/config --disable CONFIG_SCHED_ALT
+    scripts/config --enable CONFIG_CACULE_SCHED
+    scripts/config --enable CONFIG_CACULE_RDB
+    scripts/config --set-val CONFIG_RDB_INTERVAL 19
+  elif [ "$_cpusched" = "tt" ]; then
+    echo "Enable TT CPU scheduler..."
+    scripts/config --enable CONFIG_TT_SCHED
+    scripts/config --enable CONFIG_TT_ACCOUNTING_STATS
+  elif [ "$_cpusched" = "bore" ]; then
+    echo "Selecting BORE Scheduler..."
+    scripts/config --disable CONFIG_SCHED_ALT
+  elif [ "$_cpusched" = "cfs" ]; then
+    echo "Selecting Completely Fair Scheduler..."
+    scripts/config --disable CONFIG_SCHED_ALT
+  else
+    if [ -n "$_cpusched" ]; then
+      error "The value $_cpusched is invalid. Choose the correct one again."
+    else
+      error "The value is empty. Choose the correct one again."
+    fi
+    error "Selecting the CPU scheduler failed!"
+    exit
+  fi
+
+
+  if [ -n "$_use_cfi" ] && [ -n "$_use_llvm_lto" ]; then
+    echo "Enabling CFI"
+    scripts/config --enable CONFIG_ARCH_SUPPORTS_CFI_CLANG
+    scripts/config --enable CONFIG_CFI_CLANG
+  fi
+
+  if [ -n "$_use_llvm_lto" ]; then
+    echo "Enable LLVM LTO"
+    scripts/config --disable CONFIG_LTO_NONE
+  fi
+
+  #  if [ -n "$_use_pgo" ]; then
+  #    scripts/config --enable CONFIG_ARCH_SUPPORTS_PGO_CLANG
+  #    scripts/config --enable DEBUG_FS
+  #    scripts/config --enable CONFIG_PGO_CLANG
+  #  fi
 
   ### Optionally set tickrate to 1000
   if [ -n "$_1k_HZ_ticks" ]; then
@@ -304,13 +350,6 @@ prepare() {
     scripts/config --disable CONFIG_NUMA
   fi
 
-  if [ -n "$_fsync" ]; then
-    echo "Enable Fsync support"
-    scripts/config --enable CONFIG_FUTEX
-    scripts/config --enable CONFIG_FUTEX_PI
-  fi
-
-
   if [ -n "$_winesync" ]; then
     echo "Enable winesync support"
     scripts/config --module CONFIG_WINESYNC
@@ -332,13 +371,17 @@ prepare() {
   ### Enable protect mappings under memory pressure
   if [ -n "$_mm_protect" ]; then
     echo "Enabling protect file mappings under memory pressure..."
-    scripts/config --enable CONFIG_UNEVICTABLE_FILE
-    scripts/config --set-val CONFIG_UNEVICTABLE_FILE_KBYTES_LOW 0
-    scripts/config --set-val CONFIG_UNEVICTABLE_FILE_KBYTES_MIN 0
-    echo "Enabling protect anonymous mappings under memory pressure..."
-    scripts/config --enable CONFIG_UNEVICTABLE_ANON
-    scripts/config --set-val CONFIG_UNEVICTABLE_ANON_KBYTES_LOW 0
-    scripts/config --set-val CONFIG_UNEVICTABLE_ANON_KBYTES_MIN 0
+    scripts/config --set-val CONFIG_ANON_MIN_KBYTES 0
+    scripts/config --set-val CONFIG_CLEAN_LOW_KBYTES 524288
+    scripts/config --set-val CONFIG_CLEAN_MIN_KBYTES 0
+  fi
+
+  ### Enable multigenerational LRU
+  if [ -n "$_page_table_check" ]; then
+    echo "Enabling Page-Table-Check..."
+    scripts/config --enable CONFIG_PAGE_TABLE_CHECK
+    scripts/config --enable CONFIG_PAGE_TABLE_CHECK_ENFORCED
+    scripts/config --enable CONFIG_ARCH_SUPPORTS_PAGE_TABLE_CHECK
   fi
 
   ### Enable multigenerational LRU
@@ -410,13 +453,6 @@ prepare() {
     scripts/config --disable CONFIG_LRNG_SELFTEST_PANIC
   fi
 
-  echo "Enable LLVM LTO"
-  if [ -n "$_use_llvm_lto" ]; then
-    scripts/config --disable CONFIG_LTO_NONE
-  fi
-
-
-
   ### Selecting the ZSTD compression level
   if [ "$_zstd_level" = "ultra" ]; then
     echo "Enabling highest ZSTD compression ratio..."
@@ -480,6 +516,12 @@ prepare() {
   scripts/config --enable CONFIG_ANDROID_BINDER_IPC
   scripts/config --enable CONFIG_ANDROID_BINDERFS
   scripts/config --enable CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+  scripts/config --enable CONFIG_NTFS3_FS
+  echo "Enabling KBUILD_CFLAGS -O3..."
+  scripts/config --disable CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE
+  scripts/config --enable CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3
+  scripts/config --module CONFIG_IP_NF_TARGET_FULLCONENAT
+  scripts/config --module CONFIG_NETFILTER_XT_TARGET_FULLCONENAT
 
 
   ### Optionally load needed modules for the make localmodconfig
@@ -494,8 +536,8 @@ prepare() {
     fi
   fi
 
-
   echo "Applying default config..."
+
   make $LLVMOPTS olddefconfig
   make $LLVMOPTS -s kernelrelease > version
   echo "Prepared $pkgbase version $(<version)"
@@ -503,21 +545,13 @@ prepare() {
   ### Running make nconfig
   [[ -z "$_makenconfig" ]] ||  make $LLVMOPTS nconfig
 
-  ### Running make menuconfig
-  [[ -z "$_makemenuconfig" ]] || make $LLVMOPTS menuconfig
-
-  ### Running make xconfig
-  [[ -z "$_makexconfig" ]] || make $LLVMOPTS xconfig
-
-  ### Running make gconfig
-  [[ -z "$_makegconfig" ]] || make $LLVMOPTS gconfig
-
   ### Save configuration for later reuse
   cp -Tf ./.config "${startdir}/config-${pkgver}-${pkgrel}${pkgbase#linux}"
 
 }
 
 build() {
+
   cd $_srcname
 
   make -j6 $LLVMOPTS -j$(nproc) all
@@ -532,7 +566,6 @@ _package() {
   provides=(VIRTUALBOX-GUEST-MODULES WIREGUARD-MODULE)
 
   cd $_srcname
-
   local kernver="$(<version)"
   local modulesdir="$pkgdir/usr/lib/modules/$kernver"
 
@@ -645,8 +678,9 @@ for _p in "${pkgname[@]}"; do
 done
 
 
-md5sums=('7fcbea316f8439d092040996295c8f9d'
-         '5575748effb4a118e3755c799c2fb319'
+md5sums=('4423a9fc25fcaa9e562c0f28e03960b3'
+         'ebee9ba6235b8b209d04b1731fabdc28'
+         '788dcd568f1c00441ad9746706e4f1bc'
          'ef9fa3407854cea8e78112c25bb72e41'
          'e3fa8507aed6ef3ce37e62f18fe9b7e1'
          '1f3becd94390729d940a60b1e9b872b1'
@@ -661,7 +695,6 @@ md5sums=('7fcbea316f8439d092040996295c8f9d'
          '41887f2f959068e41756f4c39671ca79'
          'b04c8a3f01b3dfba1410e2c26ec7d975'
          '8cf507777e20cd4d75a0627eef10c10d'
-         '6038177c72982533035309fcd6df208a'
          '8bda7327ae759b1b52e3b617952bd964'
          '8c354c3d1962ec6785db7f0c3fbbab03'
          'b6b2c2c6b4761aa5a8dea6ac0add8736'
@@ -673,9 +706,9 @@ md5sums=('7fcbea316f8439d092040996295c8f9d'
          'd9a892f66631615a72bdc93ee7397afa'
          'bc64b1d1a9c95b07c28457f7214ebf81'
          '8d390345afa36c56fa15bf4f4edad9a2'
-         '7530840f2eb439f64307dd3157beb28e'
-         '102fd2533e85eaecb4255df77d3e2901'
+         '70b6069ecd0e2bbf1771aad96e1e2721'
          '03bb361f5f900cc9fd1159eda5e4f0ff'
+         '7530840f2eb439f64307dd3157beb28e'
          '940d98858e6e59ecc07da50e05f6bc3d'
          '21c98f19e883879dd3336c1fa143fd31'
          'b566a97c8484ac14c48e957a2df4ee70'
