--- a/linux-cachy-nspa-rt/PKGBUILD
+++ b/linux-cachy-nspa-rt/PKGBUILD
@@ -118,9 +118,9 @@ _use_llvm_lto=
 
 
 if [ -n "$_use_llvm_lto" ]; then
-  pkgbase=linux-cachy-nspa-lto
+  pkgbase=linux-cachy-nspa-rt-lto
 else
-  pkgbase=linux-cachy-nspa
+  pkgbase=linux-cachy-nspa-rt
 fi
 _major=5.16
 _minor=1
@@ -151,7 +151,6 @@ _patchsource="https://raw.githubusercontent.com/ptr1337/kernel-patches/master/5.
 source=(
   "https://cdn.kernel.org/pub/linux/kernel/v${pkgver%%.*}.x/${_srcname}.tar.xz"
   "config"
-  "0001-lru-patches.patch"
   "0001-arch-patches.patch"
   "0001-sched-perf-fix.patch"
   "0001-blk-patches.patch"
@@ -160,7 +159,6 @@ source=(
   "0001-bbr2-patches.patch"
   "0001-bfq-patches.patch"
   "0001-btrfs.patch"
-  "0001-lrng.patch"
   "0001-cpu.patch"
   "0001-clearlinux.patch"
   "0001-f2fs-xfs-ext4-patches.patch"
@@ -172,10 +170,12 @@ source=(
   "0001-futex-winesync.patch"
   "0001-hwmon.patch"
   "0001-ksmbd.patch"
-  "0001-rcu.patch"
   "0001-zstd-patches.patch"
   "0001-v4l2loopback.patch"
-  "next/0002-mm-next.patch"
+  "1001-5.16-rt.patch"
+  "1002-5.16-mg-lru-rt.patch"
+  "1003-5.16-cfi-rt.patch"
+  "1004-5.16-mm-next-rt.patch"
   "auto-cpu-optimization.sh"
   "10060-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"
   "10020-mm-Lower-the-non-hugetlbpage-pageblock-size-to-reduc.patch"
@@ -680,8 +680,7 @@ done
 
 
 md5sums=('121e4f65cf16ff76527020ea596fa431'
-         '636291e5c1eda896e3c8d0025c066144'
-         '76b9d9fa00184d10e7949bb948ca846d'
+         '812ca5a5887d5a51149204dd6ed2d72a'
          '3d8d1eeebba7d038f6d890619233e605'
          '59a9cd92fd6426caa75c706237a99dce'
          '194c8e20ad30973c32159cb23f3be4c9'
@@ -690,7 +689,6 @@ md5sums=('121e4f65cf16ff76527020ea596fa431'
          'd194311161f8f44755e532db738f4a2d'
          'b5b3d9d1cefc3955a82ec895f891abf3'
          'e9dff9b551b8fa7c0b47ae5ac0b16365'
-         '9f86c3b9e6271cfc4440864a6857b256'
          'd4c38ce51fb9a69aa92ad9b9e0199122'
          'a687c26c262ccb9ad7cb54697a1476bc'
          '2249b7ca0a7dfb0b2f835a8cc4058f1e'
@@ -702,10 +700,12 @@ md5sums=('121e4f65cf16ff76527020ea596fa431'
          '28dcc1fe3029c6c316773bbcbe82954d'
          '0714c9817397ac7568afc3e327a20ddd'
          '12ad5085b7f01793980f137f2c9451cb'
-         '167a4267269e6a709c54e7b9ea8bf8d5'
          'bf58290793d3a095ef95fb1fac2de89a'
          'cb9384ce179d08be6c90df6d0a0977a1'
-         '1613d4689c58d19417a9cd7177f6454b'
+         'aa82ad5d24907fa75375a31f0c136ba0'
+         'a400ac10a22d76a1884dc57f7a8b645c'
+         '3c1a68f944fbee64be15739bdb37976d'
+         '128d97915bd041f3cb96b57e089f33a7'
          '21c98f19e883879dd3336c1fa143fd31'
          'b566a97c8484ac14c48e957a2df4ee70'
          'a1bdff580b5d437aac2a82787dae725e'
