--- a/linux-cachy-nspa/PKGBUILD
+++ b/linux-cachy-nspa/PKGBUILD
@@ -20,7 +20,7 @@ _cpusched='cfs'
 # Set these variables to ANYTHING that is not null to enable them
 
 ### Tweak kernel options prior to a build via nconfig
-_makenconfig=y
+_makenconfig=
 
 # NUMA is optimized for multi-socket motherboards.
 # A single multi-core CPU actually runs slower with NUMA enabled.
@@ -66,13 +66,13 @@ _mm_protect=y
 _lru_enable=y
 
 ## Enable Page-Table-Check
-_page_table_check=y
+#_page_table_check=y
 
 ### Enable DAMON
 _damon=
 
 ### Enable Linux Random Number Generator
-_lrng_enable=n
+_lrng_enable=y
 
 ## Apply Kernel automatic Optimization
 _use_auto_optimization=y
@@ -85,7 +85,7 @@ _use_optimization_select=
 # ATTENTION - one of two predefined values should be selected!
 # 'ultra' - highest compression ratio
 # 'normal' - standard compression ratio
-_zstd_level='ultra'
+_zstd_level='normal'
 
 ### Selecting the ZSTD module compression level
 # If you want to use ZSTD compression,
@@ -111,7 +111,7 @@ _fork_brute=
 _use_llvm_lto=
 
 # Enable it for using the LLVM CFI PATCH for a better security
-#_use_cfi=
+_use_cfi=
 
 ## Enable PGO (patch is failing when cfi is also used)
 #_use_pgo=
@@ -123,18 +123,18 @@ else
   pkgbase=linux-cachy-nspa
 fi
 _major=5.16
-_minor=1
+_minor=3
 #_minorc=$((_minor+1))
 #_rcver=rc8
 pkgver=${_major}.${_minor}
 _stable=${_major}.${_minor}
 #_stable=${_major}
-_stablerc=${_major}-${_rcver}
+#_stablerc=${_major}-${_rcver}
 _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux CFS scheduler Kernel by CachyOS and with some other patches and other improvements'
-pkgrel=10
+pkgrel=11
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/CachyOS/linux-cachyos"
 license=('GPL2')
@@ -144,38 +144,30 @@ makedepends=('kmod' 'bc' 'libelf' 'python-sphinx' 'python-sphinx_rtd_theme'
 if [ -n "$_use_llvm_lto" ]; then
   depends=(clang llvm lld python)
 fi
-if [ -n "$_use_llvm_lto" ]; then
-  makedepends+=(clang llvm lld python)
-fi
 _patchsource="https://raw.githubusercontent.com/ptr1337/kernel-patches/master/5.16"
 source=(
   "https://cdn.kernel.org/pub/linux/kernel/v${pkgver%%.*}.x/${_srcname}.tar.xz"
   "config"
-  "0001-lru-patches.patch"
   "0001-arch-patches.patch"
-  "0001-sched-perf-fix.patch"
-  "0001-blk-patches.patch"
-  "0001-pm.patch"
+  "0001-amdpstate.patch"
   "0001-anbox.patch"
   "0001-bbr2-patches.patch"
   "0001-bfq-patches.patch"
   "0001-btrfs.patch"
-  "0001-lrng.patch"
+  "0001-cfi.patch"
   "0001-cpu.patch"
   "0001-clearlinux.patch"
-  "0001-f2fs-xfs-ext4-patches.patch"
+  "0001-lrng.patch"
+  "0001-lru-le9-patches.patch"
   "0001-misc.patch"
-  "0001-lqx-patches.patch"
   "0001-net-patches.patch"
-  "0001-fixes-miscellaneous.patch"
+  "0001-fixes-misc.patch"
   "0001-pf-patches.patch"
   "0001-futex-winesync.patch"
   "0001-hwmon.patch"
-  "0001-ksmbd.patch"
-  "0001-rcu.patch"
   "0001-zstd-patches.patch"
-  "0001-v4l2loopback.patch"
-  "next/0002-mm-next.patch"
+  "0001-cc.patch"
+  "0010-ELF.patch"
   "auto-cpu-optimization.sh"
   "10060-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"
   "10020-mm-Lower-the-non-hugetlbpage-pageblock-size-to-reduc.patch"
@@ -188,17 +180,17 @@ source=(
   "10064-hidraw-Replace_hidraw_device_table_rwsem.patch"
   "10065-background_reclaim_of_hugepages.patch"
   "10066-sched_rt-rr_timeslice_1_jiffy.patch"
+  "10067-gpiolib_amd-pinctrl.patch"
 )
 #if [ -n "$_use_pgo" ]; then
 #  source+=("0001-PGO.patch")
 #fi
 
 if [ -n "$_use_llvm_lto" ]; then
-  LLVMOPTS="LLVM=1 LLVM_IAS=1"
-  CLANGOPTS="CC=clang LD=ld.lld"
-else
-  LLVMOPTS=""
-  CLANGOPTS=""
+  BUILD_FLAGS=(
+    LLVM=1
+    LLVM_IAS=1
+  )
 fi
 
 export KBUILD_BUILD_HOST=archlinux
@@ -228,22 +220,6 @@ prepare() {
   ### Setting config
   echo "Setting config..."
   cp ../config .config
-
-
-  ### Optionally use running kernel's config
-  # code originally by nous; http://aur.archlinux.org/packages.php?ID=40191
-  if [ -n "$_use_current" ]; then
-    if [[ -s /proc/config.gz ]]; then
-      echo "Extracting config from /proc/config.gz..."
-      # modprobe configs
-      zcat /proc/config.gz > ./.config
-    else
-      warning "Your kernel was not compiled with IKCONFIG_PROC!"
-      warning "You cannot read the current config!"
-      warning "Aborting!"
-      exit
-    fi
-  fi
 
   ### Microarchitecture Optimization (GCC/CLANG)
   if [ -n "$_use_auto_optimization" ]; then
@@ -301,8 +277,14 @@ prepare() {
   fi
 
   if [ -n "$_use_llvm_lto" ]; then
-    echo "Enable LLVM LTO"
-    scripts/config --disable CONFIG_LTO_NONE
+      scripts/config --disable LTO_NONE \
+                     --enable LTO \
+                     --enable LTO_CLANG \
+                     --enable ARCH_SUPPORTS_LTO_CLANG \
+                     --enable ARCH_SUPPORTS_LTO_CLANG_THIN \
+                     --enable HAS_LTO_CLANG \
+                     --enable LTO_CLANG_THIN \
+                     --enable HAVE_GCC_PLUGINS
   fi
 
   ### Optionally set tickrate to 1000
@@ -371,12 +353,12 @@ prepare() {
   fi
 
   ### Enable multigenerational LRU
-  if [ -n "$_page_table_check" ]; then
-    echo "Enabling Page-Table-Check..."
-    scripts/config --enable CONFIG_PAGE_TABLE_CHECK
-    scripts/config --enable CONFIG_PAGE_TABLE_CHECK_ENFORCED
-    scripts/config --enable CONFIG_ARCH_SUPPORTS_PAGE_TABLE_CHECK
-  fi
+#  if [ -n "$_page_table_check" ]; then
+#    echo "Enabling Page-Table-Check..."
+#    scripts/config --enable CONFIG_PAGE_TABLE_CHECK
+#    scripts/config --enable CONFIG_PAGE_TABLE_CHECK_ENFORCED
+#    scripts/config --enable CONFIG_ARCH_SUPPORTS_PAGE_TABLE_CHECK
+#  fi
 
   ### Enable multigenerational LRU
   if [ -n "$_lru_enable" ]; then
@@ -515,26 +497,42 @@ prepare() {
   scripts/config --disable CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE
   scripts/config --enable CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3
 
-  ### Optionally load needed modules for the make localmodconfig
-  # See https://aur.archlinux.org/packages/modprobed-db
-  if [ -n "$_localmodcfg" ]; then
-    if [ -f $HOME/.config/modprobed.db ]; then
-      echo "Running Steven Rostedt's make localmodconfig now"
-      make  $LLVMOPTS LSMOD=$HOME/.config/modprobed.db localmodconfig
+  ### Optionally use running kernel's config
+  # code originally by nous; http://aur.archlinux.org/packages.php?ID=40191
+  if [ -n "$_use_current" ]; then
+    if [[ -s /proc/config.gz ]]; then
+      echo "Extracting config from /proc/config.gz..."
+      # modprobe configs
+      zcat /proc/config.gz > ./.config
     else
-      echo "No modprobed.db data found"
+      warning "Your kernel was not compiled with IKCONFIG_PROC!"
+      warning "You cannot read the current config!"
+      warning "Aborting!"
       exit
     fi
   fi
 
+
+  ### Optionally load needed modules for the make localmodconfig
+  # See https://aur.archlinux.org/packages/modprobed-db
+  if [ -n "$_localmodcfg" ]; then
+      if [ -e $HOME/.config/modprobed.db ]; then
+          echo "Running Steven Rostedt's make localmodconfig now"
+          make ${BUILD_FLAGS[*]} LSMOD=$HOME/.config/modprobed.db localmodconfig
+      else
+          echo "No modprobed.db data found"
+          exit
+      fi
+  fi
+
   echo "Applying default config..."
 
-  make $LLVMOPTS olddefconfig
-  make $LLVMOPTS -s kernelrelease > version
+  make ${BUILD_FLAGS[*]}  olddefconfig
+  make ${BUILD_FLAGS[*]} -s kernelrelease > version
   echo "Prepared $pkgbase version $(<version)"
 
   ### Running make nconfig
-  [[ -z "$_makenconfig" ]] ||  make $LLVMOPTS nconfig
+    [[ -z "$_makenconfig" ]] || make ${BUILD_FLAGS[*]} nconfig
 
   ### Save configuration for later reuse
   cp -Tf ./.config "${startdir}/config-${pkgver}-${pkgrel}${pkgbase#linux}"
@@ -542,115 +540,98 @@ prepare() {
 }
 
 build() {
-
-  cd $_srcname
-
-  make -j6 $LLVMOPTS -j$(nproc) all
+  cd ${_srcname}
+  make ${BUILD_FLAGS[*]} -j$(nproc) all
 }
 
 _package() {
   pkgdesc="The $pkgdesc kernel and modules"
   depends=('coreutils' 'kmod' 'initramfs')
   optdepends=('crda: to set the correct wireless channels of your country'
-    'linux-firmware: firmware images needed for some devices'
-  'modprobed-db: Keeps track of EVERY kernel module that has ever been probed - useful for those of us who make localmodconfig')
-  provides=(VIRTUALBOX-GUEST-MODULES WIREGUARD-MODULE)
+              'linux-firmware: firmware images needed for some devices'
+              'modprobed-db: Keeps track of EVERY kernel module that has ever been probed - useful for those of us who make localmodconfig')
+  provides=(VIRTUALBOX-GUEST-MODULES WIREGUARD-MODULE KSMBD-MODULE)
 
   cd $_srcname
 
   local kernver="$(<version)"
   local modulesdir="$pkgdir/usr/lib/modules/$kernver"
 
+  echo "Installing boot image..."
   # systemd expects to find the kernel here to allow hibernation
   # https://github.com/systemd/systemd/commit/edda44605f06a41fb86b7ab8128dcf99161d2344
-  install -Dm644 "$(make $LLVMOPTS -s image_name)" "$modulesdir/vmlinuz"
+  install -Dm644 "$(make -s image_name)" "$modulesdir/vmlinuz"
 
   # Used by mkinitcpio to name the kernel
-  echo "${pkgbase}" | install -Dm644 /dev/stdin "$modulesdir/pkgbase"
+  echo "$pkgbase" | install -Dm644 /dev/stdin "$modulesdir/pkgbase"
 
-  # make room for external modules
-  local _extramodules="extramodules-${pkgbase}"
-  ln -s "../${_extramodules}" "$modulesdir/extramodules"
-  # add real version for building modules and running depmod from hook
-  echo "${kernver}" |
-  install -Dm644 /dev/stdin "${pkgdir}/usr/lib/modules/${_extramodules}/version"
-
-  echo -e "\n${TB}* INSTALLING MODULES${TN}"
-  make $LLVMOPTS LOCALVERSION= INSTALL_MOD_PATH="${pkgdir}/usr" INSTALL_MOD_STRIP=1 modules_install
+  echo "Installing modules..."
+  make INSTALL_MOD_PATH="$pkgdir/usr" INSTALL_MOD_STRIP=1 modules_install
 
   # remove build and source links
-  rm "${modulesdir}/source"
-  rm "${modulesdir}/build"
-
-  # depmod
-  depmod -b "${pkgdir}/usr" -F System.map "${kernver}"
-
-
-
+  rm "$modulesdir"/{source,build}
 }
 
 _package-headers() {
-  pkgdesc="Headers and scripts for building modules for the ${pkgdesc}"
-  depends=("${pkgbase}=${pkgver}" "pahole")
+  pkgdesc="Headers and scripts for building modules for the $pkgdesc kernel"
+  depends=(pahole)
 
-  cd $_srcname
-  local kernver="$(<version)"
-  local _builddir="${pkgdir}/usr/lib/modules/${kernver}/build"
+  cd ${_srcname}
+  local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
 
-  echo -e "\n${TB}* INSTALLING HEADERS${TN}"
-  install -Dt "${_builddir}" -m644 Makefile .config Module.symvers System.map version vmlinux localversion.*
-  install -Dt "${_builddir}/kernel" -m644 kernel/Makefile
-  install -Dt "${_builddir}/arch/x86" -m644 "arch/x86/Makefile"
-  #mkdir "${_builddir}/.tmp_versions"
+  echo "Installing build files..."
+  install -Dt "$builddir" -m644 .config Makefile Module.symvers System.map \
+    localversion.* version vmlinux
+  install -Dt "$builddir/kernel" -m644 kernel/Makefile
+  install -Dt "$builddir/arch/x86" -m644 arch/x86/Makefile
+  cp -t "$builddir" -a scripts
 
-  cp -t "${_builddir}" -a include scripts
-
-  # add xfs and shmem for aufs building
-  mkdir -p "${_builddir}"/{fs/xfs,mm}
-
-  # add objtool for external module building and enabled VALIDATION_STACK option
-  install -Dt "${_builddir}/tools/objtool" tools/objtool/objtool
+  # required when STACK_VALIDATION is enabled
+  install -Dt "$builddir/tools/objtool" tools/objtool/objtool
 
   # required when DEBUG_INFO_BTF_MODULES is enabled
-  install -Dt "${_builddir}/tools/bpf/resolve_btfids" tools/bpf/resolve_btfids/resolve_btfids
+  #install -Dt "$builddir/tools/bpf/resolve_btfids" tools/bpf/resolve_btfids/resolve_btfids
 
-  cp -t "${_builddir}/arch/x86" -a "arch/x86/include"
-  install -Dt "${_builddir}/arch/x86/kernel" -m644 "arch/x86/kernel/asm-offsets.s"
+  echo "Installing headers..."
+  cp -t "$builddir" -a include
+  cp -t "$builddir/arch/x86" -a arch/x86/include
+  install -Dt "$builddir/arch/x86/kernel" -m644 arch/x86/kernel/asm-offsets.s
 
-  install -Dt "${_builddir}/drivers/md" -m644 drivers/md/*.h
-  install -Dt "${_builddir}/net/mac80211" -m644 net/mac80211/*.h
+  install -Dt "$builddir/drivers/md" -m644 drivers/md/*.h
+  install -Dt "$builddir/net/mac80211" -m644 net/mac80211/*.h
 
-  # http://bugs.archlinux.org/task/13146
-  install -Dt "${_builddir}/drivers/media/i2c" -m644 drivers/media/i2c/msp3400-driver.h
+  # https://bugs.archlinux.org/task/13146
+  install -Dt "$builddir/drivers/media/i2c" -m644 drivers/media/i2c/msp3400-driver.h
 
-  # http://bugs.archlinux.org/task/20402
-  install -Dt "${_builddir}/drivers/media/usb/dvb-usb" -m644 drivers/media/usb/dvb-usb/*.h
-  install -Dt "${_builddir}/drivers/media/dvb-frontends" -m644 drivers/media/dvb-frontends/*.h
-  install -Dt "${_builddir}/drivers/media/tuners" -m644 drivers/media/tuners/*.h
+  # https://bugs.archlinux.org/task/20402
+  install -Dt "$builddir/drivers/media/usb/dvb-usb" -m644 drivers/media/usb/dvb-usb/*.h
+  install -Dt "$builddir/drivers/media/dvb-frontends" -m644 drivers/media/dvb-frontends/*.h
+  install -Dt "$builddir/drivers/media/tuners" -m644 drivers/media/tuners/*.h
 
-  # copy in Kconfig files
-  find . -name Kconfig\* -exec install -Dm644 {} "${_builddir}/{}" \;
+  # https://bugs.archlinux.org/task/71392
+  install -Dt "$builddir/drivers/iio/common/hid-sensors" -m644 drivers/iio/common/hid-sensors/*.h
 
-  # remove unneeded stuff
-  echo -e "\n${TB}* REMOVING UNNEEDED FILES${TN}"
-  # remove unneeded architectures
-  local _arch
-  for _arch in "${_builddir}"/arch/*/; do
-    [[ ${_arch} == */x86/ ]] && continue
-    rm -r "${_arch}"
+  echo "Installing KConfig files..."
+  find . -name 'Kconfig*' -exec install -Dm644 {} "$builddir/{}" \;
+
+  echo "Removing unneeded architectures..."
+  local arch
+  for arch in "$builddir"/arch/*/; do
+    [[ $arch = */x86/ ]] && continue
+    echo "Removing $(basename "$arch")"
+    rm -r "$arch"
   done
 
-  # remove files already in linux-docs package
-  rm -r "${_builddir}/Documentation"
+  echo "Removing documentation..."
+  rm -r "$builddir/Documentation"
 
-  # remove broken symlinks
-  find -L "${_builddir}" -type l -printf 'Removing %P\n' -delete
+  echo "Removing broken symlinks..."
+  find -L "$builddir" -type l -printf 'Removing %P\n' -delete
 
-  # remove loose objects"
-  find "${_builddir}" -type f -name '*.o' -printf 'Removing %P\n' -delete
+  echo "Removing loose objects..."
+  find "$builddir" -type f -name '*.o' -printf 'Removing %P\n' -delete
 
-  # strip scripts directory
-  echo -e "\n${TB}* STRIPPING${TN}"
+  echo "Stripping build tools..."
   local file
   while read -rd '' file; do
     case "$(file -bi "$file")" in
@@ -663,52 +644,47 @@ _package-headers() {
       application/x-pie-executable\;*) # Relocatable binaries
         strip -v $STRIP_SHARED "$file" ;;
     esac
-  done < <(find "${_builddir}" -type f -perm -u+x ! -name vmlinux -print0)
+  done < <(find "$builddir" -type f -perm -u+x ! -name vmlinux -print0)
 
-  strip -v $STRIP_STATIC "${_builddir}/vmlinux"
+  echo "Stripping vmlinux..."
+  strip -v $STRIP_STATIC "$builddir/vmlinux"
 
-  echo -e "\n${TB}* SYMLINKING${TN}"
+  echo "Adding symlink..."
   mkdir -p "$pkgdir/usr/src"
-  ln -sr "$_builddir" "$pkgdir/usr/src/$pkgbase"
-
+  ln -sr "$builddir" "$pkgdir/usr/src/$pkgbase"
 }
 
 pkgname=("$pkgbase" "$pkgbase-headers")
 for _p in "${pkgname[@]}"; do
   eval "package_$_p() {
-             $(declare -f "_package${_p#$pkgbase}")
-             _package${_p#$pkgbase}
+    $(declare -f "_package${_p#$pkgbase}")
+    _package${_p#$pkgbase}
   }"
 done
 
 
-md5sums=('121e4f65cf16ff76527020ea596fa431'
+md5sums=('6c504067f42447ea00880f8801cc5faf'
          '636291e5c1eda896e3c8d0025c066144'
-         '76b9d9fa00184d10e7949bb948ca846d'
          '3d8d1eeebba7d038f6d890619233e605'
-         '59a9cd92fd6426caa75c706237a99dce'
-         '194c8e20ad30973c32159cb23f3be4c9'
-         '2faaa79055263c1cdeeaa2896e641696'
+         '88ecfa045fff42d9744c28e90f177fbb'
          '80e419d6847d4122a23a141fd3a40e52'
          'd194311161f8f44755e532db738f4a2d'
-         'b5b3d9d1cefc3955a82ec895f891abf3'
+         'e9e0e6fb78ce83bcd3ab20ac20e8d128'
          'e9dff9b551b8fa7c0b47ae5ac0b16365'
-         '9f86c3b9e6271cfc4440864a6857b256'
+         '0a353926bf4a790374e0f946a7039b40'
          'd4c38ce51fb9a69aa92ad9b9e0199122'
          'a687c26c262ccb9ad7cb54697a1476bc'
-         '2249b7ca0a7dfb0b2f835a8cc4058f1e'
+         '9f86c3b9e6271cfc4440864a6857b256'
+         'c463c17e1bf27df35f05eb1004c2ba48'
          '80920e501b9b87bfe587edff445e6efe'
-         '231fa80a33e7a926ba832d3bd66d2ce6'
          'bf010dff1d7a48191d491eba2dde1227'
-         'b7867c9203f9f1ec1e3d6648a4659624'
+         'e65542f1346a17ad3d94df92d6b659e4'
          'be1e00d93e9c2ba91ee6017b82e64194'
          '28dcc1fe3029c6c316773bbcbe82954d'
-         '0714c9817397ac7568afc3e327a20ddd'
-         '12ad5085b7f01793980f137f2c9451cb'
-         '167a4267269e6a709c54e7b9ea8bf8d5'
-         'bf58290793d3a095ef95fb1fac2de89a'
-         'cb9384ce179d08be6c90df6d0a0977a1'
-         '1613d4689c58d19417a9cd7177f6454b'
+         'bcbe26e4874913a233bac2ea46ed945b'
+         'b8de60147525240358a5aea6d809f0ed'
+         'd2a8951a9292e5c397b8cdd50b61a92b'
+         'a05b47e1970509a27f36501534751a9b'
          '21c98f19e883879dd3336c1fa143fd31'
          'b566a97c8484ac14c48e957a2df4ee70'
          'a1bdff580b5d437aac2a82787dae725e'
@@ -720,4 +696,5 @@ md5sums=('121e4f65cf16ff76527020ea596fa431'
          'db7646f8882c01088370c92baceb7d44'
          '2febe27c9376e03c0826c2e188d219ef'
          'd4ac933e3938899f159a8248c0c35154'
-         '390865cd3a74027e06cec0c61305607f')
+         '390865cd3a74027e06cec0c61305607f'
+         'd324e0cbc9f921b29cea39d6659e832e')
