--- a/linux-cachy-nspa/PKGBUILD
+++ b/linux-cachy-nspa/PKGBUILD
@@ -126,20 +126,20 @@ _patchsource="https://raw.githubusercontent.com/ptr1337/kernel-patches/master/${
 source=(
   "https://cdn.kernel.org/pub/linux/kernel/v${pkgver%%.*}.x/${_srcname}.tar.xz"
   "config"
-  "${_patchsource}/0001-arch.patch"
-  "${_patchsource}/0002-anbox.patch"
-  "${_patchsource}/0003-bbr2.patch"
-  "${_patchsource}/0004-cachy.patch"
-  "${_patchsource}/0005-migrate.patch"
-  "${_patchsource}/0006-clearlinux.patch"
-  "${_patchsource}/0007-cpu.patch"
-  "${_patchsource}/0008-fixes-miscellaneous.patch"
-  "${_patchsource}/0009-fs-patches.patch"
-  "${_patchsource}/0010-hwmon.patch"
-  "${_patchsource}/0011-lru-le9.patch"
-  "${_patchsource}/0012-spf-lru.patch"
-  "${_patchsource}/0014-lrng.patch"
-  "${_patchsource}/0015-ck-hrtimer.patch"
+  "0001-arch.patch"
+  "0002-anbox.patch"
+  "0003-bbr2.patch"
+  "0004-cachy.patch"
+  "0005-migrate.patch"
+  "0006-clearlinux.patch"
+  "0007-cpu.patch"
+  "0008-fixes-miscellaneous.patch"
+  "0009-fs-patches.patch"
+  "0010-hwmon.patch"
+  "0011-lru-le9.patch"
+  "0012-spf-lru.patch"
+  "0014-lrng.patch"
+  "0015-ck-hrtimer.patch"
   "auto-cpu-optimization.sh"
   "10060-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"
   "10030-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"
