--- a/linux-nspa/config
+++ b/linux-nspa/config
@@ -246,6 +246,7 @@ CONFIG_RD_LZO=y
 CONFIG_RD_LZ4=y
 CONFIG_RD_ZSTD=y
 CONFIG_BOOT_CONFIG=y
+# CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE is not set
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_LD_ORPHAN_WARN=y
@@ -2410,9 +2411,13 @@ CONFIG_RTW88_CORE=m
 CONFIG_RTW88_PCI=m
 CONFIG_RTW88_8822B=m
 CONFIG_RTW88_8822BE=m
+# CONFIG_RTW88_8822BU is not set
 # CONFIG_RTW88_8822CE is not set
+# CONFIG_RTW88_8822CU is not set
 # CONFIG_RTW88_8723DE is not set
+# CONFIG_RTW88_8723DU is not set
 # CONFIG_RTW88_8821CE is not set
+# CONFIG_RTW88_8821CU is not set
 CONFIG_RTW88_DEBUG=y
 CONFIG_RTW88_DEBUGFS=y
 # CONFIG_RTW89 is not set
@@ -3306,7 +3311,6 @@ CONFIG_SENSORS_JC42=m
 # CONFIG_SENSORS_NTC_THERMISTOR is not set
 # CONFIG_SENSORS_NCT6683 is not set
 # CONFIG_SENSORS_NCT6775 is not set
-# CONFIG_SENSORS_NCT6775_I2C is not set
 # CONFIG_SENSORS_NCT7802 is not set
 # CONFIG_SENSORS_NCT7904 is not set
 # CONFIG_SENSORS_NPCM7XX is not set
