Linux-NSPA-devel: add sched && AMD pmf-CnQf platform patchwork
 - Bring back sched/fair feec scale rt_capacity improvements patchwork
 - Add sched/core affinity patchwork
 - Add/backport platform x86 AMD PMF and CnQf drivers

Signed-off-by: Jordan Johnston <johnstonljordan@gmail.com>

--- a/linux-nspa-devel/config
+++ b/linux-nspa-devel/config
@@ -623,7 +623,7 @@ CONFIG_ACPI_PROCESSOR=y
 CONFIG_ACPI_HOTPLUG_CPU=y
 # CONFIG_ACPI_PROCESSOR_AGGREGATOR is not set
 CONFIG_ACPI_THERMAL=y
-CONFIG_ACPI_PLATFORM_PROFILE=m
+CONFIG_ACPI_PLATFORM_PROFILE=y
 CONFIG_ARCH_HAS_ACPI_TABLE_UPGRADE=y
 CONFIG_ACPI_TABLE_UPGRADE=y
 CONFIG_ACPI_DEBUG=y
@@ -2931,7 +2931,7 @@ CONFIG_I2C_PIIX4=m
 CONFIG_I2C_DESIGNWARE_CORE=y
 CONFIG_I2C_DESIGNWARE_SLAVE=y
 CONFIG_I2C_DESIGNWARE_PLATFORM=y
-# CONFIG_I2C_DESIGNWARE_AMDPSP is not set
+CONFIG_I2C_DESIGNWARE_AMDPSP=y
 CONFIG_I2C_DESIGNWARE_BAYTRAIL=y
 CONFIG_I2C_DESIGNWARE_PCI=y
 # CONFIG_I2C_EMEV2 is not set
@@ -5942,6 +5942,7 @@ CONFIG_WMI_BMOF=m
 # CONFIG_ACERHDF is not set
 # CONFIG_ACER_WIRELESS is not set
 # CONFIG_ACER_WMI is not set
+CONFIG_AMD_PMF=y
 # CONFIG_AMD_PMC is not set
 # CONFIG_AMD_HSMP is not set
 # CONFIG_ADV_SWBUTTON is not set
@@ -7619,6 +7620,7 @@ CONFIG_KFENCE_NUM_OBJECTS=255
 # CONFIG_KFENCE_DEFERRABLE is not set
 # CONFIG_KFENCE_STATIC_KEYS is not set
 CONFIG_KFENCE_STRESS_TEST_FAULTS=0
+CONFIG_HAVE_ARCH_KMSAN=y
 # end of Memory Debugging
 
 CONFIG_DEBUG_SHIRQ=y
