--- a/linux-nspa-devel/PKGBUILD
+++ b/linux-nspa-devel/PKGBUILD
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=4
+pkgrel=5
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -116,6 +116,9 @@ source=(
   "0025-sched-core-sched-Fix-TASK_state-comparisons.patch"
   "0026-sbitmap-fix_lockup_while_swapping.patch"
   "0027-hid-wacom-Silence_log_spam.patch"
+  "0028-sched-fair-feec-scale_rt_capacity-improvements.patch"
+  "0030-platform-x86-AMD-pmf-CnQf.patch"
+  "0031-sched-core-affinity_patchwork.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -461,7 +464,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
-            '171c16a2f3ac505a467c0619761ba3cea9b9867fa655125c41c51915c83a1223'
+            '8546e6f8e10abc2eff8373ee0d3920ed1fd114e297ce5f0d47a4aad5719d2080'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             '65ec9ac5b8b28d5b61df1c72498059be2e7cb1f9b965bac0e4ffed3c05520b2b'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
@@ -493,5 +496,8 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '8373f42c0d3e349983c486ee3ab78de7f2f71f225ee761cdf08f7e54e8430657'
             '9837738ff7721de537ddc7bac33f7e9da90d545913b08a0d58d7d4271b2f287a'
             '153935699c4f15434c06582a64054660f55eaee9d5c70b277442b5156ccdfb15'
-            '59b410a6cbe6a33c91f54139e4a710fbd2dc29e771d60d49b7ec715d3d7e12fe')
+            '59b410a6cbe6a33c91f54139e4a710fbd2dc29e771d60d49b7ec715d3d7e12fe'
+            'c6c7d94199e2a1c607841a57068f6351d299ac5aa159ef777312722150856523'
+            'ea7d35280b3a02acbc79a92fa5ddce678d5fdfaecb65ee35ef13a076a0a8eb55'
+            'fb31aa7f60f970d5161cdd06386a96c9fda0504bde27fd5b61fa66c74e84fbb5')
 
