Linux-NSPA(+devel) sync/update packages
 - add the softirq_rt_optimizations V4 patch
 - remove the !PREEMPT_RT dep from the softirq_rt patch. For upstream that makes
   sense, but I'm a lowly proaudio user who doesn't want the NET_RX softirq (or others)
   causing audio glitches. ~ So i use the patch how it is used on android, basically.
 - remove the bitmaps-6.1 patchwork, it currently has some issues - and I may just
   wait until linux-6.1 to test the CONFIG_FORCE_NR_CPUS=y optimization.

  * packages are sync'd ATM.

Signed-off-by: Jordan Johnston <johnstonljordan@gmail.com>

--- a/linux-nspa/config
+++ b/linux-nspa/config
@@ -244,6 +244,7 @@ CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_SCHED_AUTOGROUP=y
+CONFIG_RT_SOFTIRQ_OPTIMIZATION=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
@@ -7467,6 +7468,7 @@ CONFIG_CMA_ALIGNMENT=8
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_DMA_MAP_BENCHMARK is not set
 CONFIG_SGL_ALLOC=y
+CONFIG_FORCE_NR_CPUS=y
 CONFIG_CPU_RMAP=y
 CONFIG_DQL=y
 CONFIG_GLOB=y
