--- a/linux-nspa-devel/config
+++ b/linux-nspa-devel/config
@@ -244,6 +244,7 @@ CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_SCHED_AUTOGROUP=y
+CONFIG_RT_SOFTIRQ_OPTIMIZATION=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
