--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=8
+pkgrel=10
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -90,6 +90,7 @@ source=(
   "0000-TIP-locking-core_6.1-oct7.patch"
   "0000-TIP-rcu.2022.09.30-oct7.patch"
   "0000-TIP-sched-core_6.1-mostly_oct10.patch"
+  "0000-io_uring-6.1_updates.patch"
   "0001-ClearLinux-patchwork.patch"
   "0002-MM-Maple-Tree-MGlru-all_6.1.patch"
   "0004-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"
@@ -120,7 +121,7 @@ source=(
   "0033-ALSA-dmaengine-increment_buffer_pointer_atomically.patch"
   "0034-HID-multitouch-Add_memory_barriers.patch"
   "0035-Signal-break_out_of_wait_loops_on_kthread_stop.patch"
-  "0036-io_uring-6.1_updates.patch"
+  "0037-softirq_rt_optmizations_v4.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -466,13 +467,14 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
-            'd1281eef29cd790c8416086b6ffde806f3555aeeceb17a4a248e032a788b77f8'
+            'cdb8494b55132eceb05953c7b59b99a43b5ffdda38ebe4255b3cc0904129713e'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
             'd6df293139a7a04720b74832a726ebcf733f467b3af051570c6ba0c602d1fa8e'
             'f8769d0090df6cf9b89dd6b7874697629fde5b8a1aac0a59f007d0cfa0f2b24c'
             'c99b5546efd7ab8d78fa927e8c7541b1878d8b0ca76bc4c6da76239c858f0bf7'
+            '9d6ac17bf79e322299471161465003da0e1168a51846da9561bef74edba0d7d3'
             '35a7cde86fb94939c0f25a62b8c47f3de0dbd3c65f876f460b263181b3e92fc0'
             'a16d854c622377ba752d5e17c1fc728a10802ac43289c17feef9bcb153385cde'
             'f6383abef027fd9a430fd33415355e0df492cdc3c90e9938bf2d98f4f63b32e6'
@@ -503,5 +505,5 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '86030c72531b045bc9fc27329334f7c6a506fb789d0b81e08ff192b43491ae9b'
             'ccc57033c40817060be1399e4be9e1db585c695967a74c0f3b94bc342c242bea'
             'a32576a1c21e3cc1a892e36ea221677d5da318c141693127ab00bb863378638b'
-            '9d6ac17bf79e322299471161465003da0e1168a51846da9561bef74edba0d7d3')
+            '2b392ce19b2e924d4e8b2603179eb859595e7710b7c594bba22f6e9099fc329d')
 
